--- a/Caribbean STEM Hub.css
+++ b/Caribbean STEM Hub.css
@@ -20,6 +20,7 @@ header {
     display: block;
     font-size: 34px; /* Adjust the font size as needed */
     font-weight: bold;
+    color: #ffffff;
 }
 
 /* Navigation menu styling */
